Fix page being too tall on android by limiting 100vh to iOS standalone

--- a/src/fe/style.less
+++ b/src/fe/style.less
@@ -98,8 +98,15 @@ noscript {
     top: 0;
     left: 0;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     overscroll-behavior: contain;
+}
+body.is-ios-standalone {
+    .root-container,
+    .global-error-container,
+    #unsupported {
+        height: 100vh;
+    }
 }
 
 .global-error-container {
